arquitectura: permisos dashboard sin acabar / estacion: sensor dht

--- a/src/arquitectura/grafana/grafana-ini-confimap.yaml
+++ b/src/arquitectura/grafana/grafana-ini-confimap.yaml
@@ -8,12 +8,10 @@ metadata:
 data:
   grafana.ini: |
     [auth.anonymous]
-    # enable anonymous access 
-    enabled = true
-    # specify organization name that should be used for unauthenticated users
-    org_name = ORGANIZATION
-    # specify role for unauthenticated users
-    org_role = Viewer
+    enabled = false
+    org_name = Main Org.
+    org_role = Editor
+    hide_version = true
     [analytics]
     check_for_updates = true
     [grafana_net]
